Fixed map overlap on home page

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -10,7 +10,8 @@ $dark-gray: #333333
 .g-map-canvas
   width: 300px
   height: 300px
-
+  margin: auto
+  
 /* headers */
 h1
   font-family: 'Montserrat', sans-serif
